hello-service/k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-service
  labels:
    app: hello-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-service
  template:
    metadata:
      labels:
        app: hello-service
    spec:
      containers:
        - name: hello-service
          image: registry.dev.local.gd:5001/hello-service:latest
          ports:
            - containerPort: 8080
---
