hello-service/k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  # namespace: apps
  name: hello-service
spec:
  selector:
    app: hello-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort

---
