hello-service/k8s/ingress-nginx.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  # namespace: apps
  name: hello-service-ingress
  annotations:
    networking.kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: hello.local.gd
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-service
                port:
                  number: 8080
---
